# pet-service

./: .gitignore  alembic.ini  config.py  main.py  pyproject.toml  test.py  test_main.http
app/: main.py
app/routers/: users.py
app/schemas/: users.py
app/utils/: users.py
db/: models.py
db/migrations/: env.py
db/migrations/versions/: 58b2ea70e28d_init_migrate.py  844937090a51_init_migrate.py  ea49c4872deb_add_autoincriment.py
db/models/: base.py  posts.py  users.py
templates/: form.html
